--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,78 +1,66 @@
 services:
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: django_app
-    command: >
-      sh -c "python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
-    ports:
-      - "8000:8000"
-    env_file:
-      - .env
-    environment:
-      DATABASE_HOST: db
-      REDIS_HOST: redis
+    build: .
+    command: sh -c "python manage.py collectstatic --noinput && gunicorn config.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - .:/app
+      - static_volume:/app/staticfiles
+    expose:
+      - "8000"
     depends_on:
       - db
       - redis
+    env_file:
+      - ./.env
+
+  nginx:
+    build:
+      context: ./nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - static_volume:/app/staticfiles
+    depends_on:
+      - web
 
   db:
-    image: postgres:16.3
-    container_name: postgres_db
-    env_file:
-      - .env
-    environment:
-      POSTGRES_DB: ${DATABASE_NAME}
-      POSTGRES_USER: ${DATABASE_USER}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+    image: postgres:16
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
 
   redis:
-    image: redis:7-alpine
-    container_name: redis
+    image: redis:7
+    volumes:
+      - redis_data:/data
+    env_file:
+      - ./.env
 
   celery:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: celery_worker
-    command: >
-      sh -c "celery -A config worker --loglevel=info"
-    env_file:
-      - .env
-    environment:
-      DATABASE_HOST: db
-      REDIS_HOST: redis
+    build: .
+    command: celery -A config worker --loglevel=info
     volumes:
       - .:/app
     depends_on:
-      - db
-      - redis
       - web
+      - redis
+    env_file:
+      - ./.env
 
   celery_beat:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: celery_beat
-    command: >
-      sh -c "celery -A config beat --loglevel=info"
-    env_file:
-      - .env
-    environment:
-      DATABASE_HOST: db
-      REDIS_HOST: redis
+    build: .
+    command: celery -A config beat --loglevel=info
     volumes:
       - .:/app
     depends_on:
-      - db
-      - redis
       - web
+      - redis
+    env_file:
+      - ./.env
 
 volumes:
   postgres_data:
+  static_volume:
+  redis_data:
