--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,9 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests
-      run: python manage.py test
+      run: |
+        python manage.py migrate
+        python manage.py test
 
   build:
     needs: test
