--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 env:
      SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
      ANOTHER_VAR: value
+     TEST_ENV: 'true'
 
 jobs:
   lint:
