--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on: [push, pull_request]
 env:
      SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
      ANOTHER_VAR: value
+     POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+     POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
 
 jobs:
   lint:
