--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,13 @@ jobs:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_DB: django_project
+          POSTGRES_DB: $${{ secrets. DATABASE_NAME }}
           POSTGRES_USER: ${{ secrets.DATABASE_USER }}
           POSTGRES_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U ${DATABASE_USER}"
+          --health-cmd "pg_isready -U postgres"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -52,23 +52,34 @@ jobs:
           --health-retries 5
 
     steps:
-    - name: Check out code
-      uses: actions/checkout@v3
+      - name: Check out code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run tests
-      run: |
-        python manage.py migrate
-        python manage.py test
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          for i in {1..30}; do
+            if docker exec postgres pg_isready -U ${{ secrets.DATABASE_USER }}; then
+              echo "Postgres is ready"
+              break
+            fi
+            echo "Waiting for Postgres..."
+            sleep 5
+          done
+
+      - name: Run migrations and tests
+        run: |
+          python manage.py migrate
+          python manage.py test
 
   build:
     needs: test
@@ -104,7 +115,6 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
           docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/SubscriptionManagementSystem:${{ github.sha }}
-          docker stop SubscriptionManagementSystem || true
-          docker rm SubscriptionManagementSystem || true
+          docker stop SubscriptionManagementSystem || true && docker rm SubscriptionManagementSystem || true
           docker run -d --name SubscriptionManagementSystem -p 80:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/SubscriptionManagementSystem:${{ github.sha }}
           EOF
