--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,23 +101,20 @@ jobs:
         run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/subscriptionmanagementsystem:${{ github.sha }}
 
   deploy:
-    needs: build
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-
       - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.9.0
+        uses: appleboy/ssh-action@v1.0.3
         with:
-          ssh-private-key: ${{ secrets.SSH_KEY }}
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_SECRET_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
 
-      - name: Deploy to Server
-        run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} << 'EOF'
-          docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/subscriptionmanagementsystem:${{ github.sha }}
-          docker stop subscriptionmanagementsystem
-          && docker rm subscriptionmanagementsystem
-          docker run -d --name subscriptionmanagementsystem -p 80:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/subscriptionmanagementsystem:${{ github.sha }}
-          EOF
+
+          script:
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/subscriptionmanagementsystem:${{ github.sha }}
+            docker stop subscriptionmanagementsystem
+            && docker rm subscriptionmanagementsystem
+            docker run -d --name subscriptionmanagementsystem -p 80:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/subscriptionmanagementsystem:${{ github.sha }}
